# search-engine-rust

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  main.rs  search_engine.rs  tokenizer.rs
src/database/: disk_hash_map.rs  doc_map.rs  indexer.rs  mod.rs
src/indexer/: mod.rs
src/inverted_index/: constants.rs  disk_inverted_index.rs  doc_map.rs  mod.rs
src/inverted_index_db/: indexer.rs  mod.rs  url_map.rs
src/kv_database/: constants.rs  database.rs  disk_hash_map.rs  iterators.rs  mod.rs  seek_pos_map.rs
src/search/: engine.rs  mod.rs  search_result.rs
tests/test-data/: search_test_db.test  search_test_seek.test  search_test_url_map.test  search_test_url_map_seek.test
