[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
rev_buf_reader = "0.3.0"
rust-stemmers = "1.2.0"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokenizers = { version = "0.15.1", features = ["http"] }
walkdir = "2.4.0"
